<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2c8089d3">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/NID"
                android:id="@+id/viewYourId2"
                android:layout_marginTop="38dp"
                android:layout_marginLeft="16dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                style="@style/button_text2_less_size"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/viewId2"

                android:layout_toEndOf="@id/viewYourId2"
                android:layout_toRightOf="@id/viewYourId2"
                android:layout_alignTop="@id/viewYourId2" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:inputType="number"
                android:ems="10"
                android:hint="@string/card_number_hint"
                android:id="@+id/cardNumber"
                android:background="@drawable/input"
                android:layout_centerVertical="true"
                android:layout_alignRight="@+id/imgLogo"
                android:layout_alignEnd="@+id/imgLogo" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:text="@string/charge_card"
                android:id="@+id/charge"
                android:background="@drawable/button_charge"
                style="@style/button_style"
                android:layout_alignTop="@+id/cardNumber"
                android:layout_toEndOf="@+id/cardNumber"
                android:layout_toRightOf="@+id/cardNumber"
                android:onClick="reCharge" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/imgLogo"
                android:layout_below="@+id/viewYourId2"
                android:layout_centerHorizontal="true"
                />



        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/addVer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id">
        </com.google.android.gms.ads.AdView>


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/charge"
            android:id="@+id/button4"
            android:layout_weight="1"
            android:background="@drawable/button_mune"
            style="@style/button_style" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/balance"
            android:id="@+id/button5"
            android:layout_weight="1"
            android:background="@drawable/button_mune"
            style="@style/button_style"
            android:nestedScrollingEnabled="false"
            android:onClick="requestBalance" />
    </LinearLayout>

</LinearLayout>