<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end|right">



        <TextView
            android:layout_marginEnd="5dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="5dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="38dp"
            android:id="@+id/viewId2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NID"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/viewYourId2"
            style="@style/button_text2_less_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="5dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="38dp"
            android:text="@string/NID"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/imgLogo"
            android:layout_below="@+id/viewYourId2"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"

            android:id="@+id/textView5"

            android:layout_gravity="right" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="2">



        <Button
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/charge_card"
            android:id="@+id/charge"
            android:background="@drawable/button_charge"
            style="@style/button_style"
            android:onClick="reCharge"
            android:layout_gravity="left" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:inputType="number"
            android:hint="@string/card_number_hint"
            android:ems="10"
            android:id="@+id/cardNumber"
            android:background="@drawable/input"
            android:layout_gravity="left" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/charge"
            android:id="@+id/button4"
            android:layout_weight="1"
            android:background="@drawable/button_mune"
            style="@style/button_style" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/balance"
            android:id="@+id/button5"
            android:layout_weight="1"
            android:background="@drawable/button_mune"
            style="@style/button_style"
            android:nestedScrollingEnabled="false"
            android:onClick="requestBalance" />
    </LinearLayout>


</LinearLayout>